force-app/main/default/objects/Scorecard_Snapshot__c/Scorecard_Snapshot__c.object-meta.xml
<CustomObject>
    <description>2025-August - These are created automatically to capture Scorecard Scores at the beginning of each month.</description>
    <label>Scorecard Snapshot</label>
    <nameField>
        <displayFormat>SCSS-{0000000}</displayFormat>
        <label>Scorecard Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>