force-app/main/default/objects/Scorecard_Snapshot__c/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <label>Delta</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>