force-app/main/default/objects/Scorecard_Snapshot__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>