force-app/main/default/objects/Scorecard_Snapshot__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>AUTO - The parent record Id, either an Account (001) or Opportunity (006).</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>