force-app/main/default/objects/Scorecard_Snapshot__c/fields/Record_Url__c.field-meta.xml
<CustomField>
    <fullName>Record_Url__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Record_Id__c, Record_Name__c)</formula>
    <label>Record Url</label>
    <type>Text</type>
</CustomField>