force-app/main/default/objects/Scorecard_Snapshot__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <label>Stage Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>